подключение к postgresql удаление валидации для ввода разделителя

--- a/MvcBook/appsettings.json
+++ b/MvcBook/appsettings.json
@@ -2,13 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Warning", 
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcBookContext": "Server=(localdb)\\mssqllocaldb;Database=MvcBookContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"MvcBookContext": "Server=(localdb)\\mssqllocaldb;Database=MvcBookContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcBookContext": "Server=127.0.0.1;User Id=postgres;Password=postgres;Port=5432;Database=BookStore;"
 
   }
 }
